--- a/dream-journal/index.html
+++ b/dream-journal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dreamjournal.ico" />
+    <link rel="icon" type="image/svg+xml" href="/dream-journal.ico" />
     <meta name="viewport" description="width=device-width, initial-scale=1.0" />
     <title>Dream Journal</title>
 
