--- a/dream-journal/index.html
+++ b/dream-journal/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/dreamjournal.ico" />
+    <link rel="icon" type="image/svg+xml" href="/dream-journal.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dream Journal</title>
 
@@ -12,6 +12,21 @@
       href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <style>
+      :root {
+        &[data-theme="dark"] {
+          color-scheme: dark;
+        }
+      }
+    </style>
+
+    <script>
+      const item = localStorage.getItem("theme");
+      if (item === "dark") {
+        document.documentElement.dataset.theme = item;
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
